[package]
name = "wall"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
bmp = "0.5"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
